@startuml package

skinparam defaultFontSize 18

interface Resettable
abstract PaymentListener

Resettable <|-right- PaymentListener
JPanel <|-right- PaymentListener
PaymentListener *- JLabel
PaymentListener *- JTextField
PaymentListener *-left- JPanel
CashListener -up-|> PaymentListener
CheckListener -up-|> PaymentListener
CreditListener -up-|> PaymentListener

class CashListener {
    + boolean checkValidation()
    + void setInputLabel()
}

class CheckListener {
    + boolean checkValidation()
    + void setInputLabel()
}

class CreditListener {
    + boolean checkValidation()
    + void setInputLabel()
}

abstract class PaymentListener {
    ~ JLabel inputLabel
    ~ JTextField inputTextField
    ~ JPanel paymentPanel
    + PaymentListener()
    - void initialize()
    + String getInputValue()
    {abstract} + boolean checkValidation()
    {abstract} + void setInputLabel()
    + void reset()
}
@enduml